// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SecurityContainer /> renders apiKey type 1`] = `
<div
  className={undefined}
>
  <div
    className=""
    onClick={[Function]}
  >
    <h3>
      api_key
       
      <code
        className={undefined}
      >
        type=
        apiKey
      </code>
    </h3>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
  </div>
  <section
    id="api_key"
  />
</div>
`;

exports[`<SecurityContainer /> renders http type 1`] = `
<div
  className={undefined}
>
  <div
    className=""
    onClick={[Function]}
  >
    <h3>
      JWT
       
      <code
        className={undefined}
      >
        type=
        http
      </code>
    </h3>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
  </div>
  <section
    id="JWT"
  />
</div>
`;

exports[`<SecurityContainer /> renders oauth2 type in Method 1`] = `
<div
  className={undefined}
>
  <div
    className=""
    onClick={[Function]}
  >
    <h5>
      oauth2
       
      <code
        className={undefined}
      >
        type=
        oauth2
      </code>
    </h5>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
  </div>
  <section
    id="oauth2"
  />
</div>
`;

exports[`<SecurityContainer /> renders oauth2 type in Schema 1`] = `
<div
  className={undefined}
>
  <div
    className=""
    onClick={[Function]}
  >
    <h3>
      oauth2
       
      <code
        className={undefined}
      >
        type=
        oauth2
      </code>
    </h3>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
  </div>
  <section
    id="oauth2"
  />
</div>
`;

exports[`<SecurityContainer /> renders openIdConnect type in Method 1`] = `
<div
  className={undefined}
>
  <div
    className=""
    onClick={[Function]}
  >
    <h5>
      openIdConnect
       
      <code
        className={undefined}
      >
        type=
        openIdConnect
      </code>
    </h5>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
  </div>
  <section
    id="openIdConnect"
  />
</div>
`;

exports[`<SecurityContainer /> renders openIdConnect type in Schema 1`] = `
<div
  className={undefined}
>
  <div
    className=""
    onClick={[Function]}
  >
    <h3>
      openIdConnect
       
      <code
        className={undefined}
      >
        type=
        openIdConnect
      </code>
    </h3>
    <div
      className=""
    >
      <img
        alt=""
        src="test-file-stub"
        title="arrow"
      />
    </div>
  </div>
  <section
    id="openIdConnect"
  />
</div>
`;
